<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InfoActivity">

    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/bmi_info_number"
            android:textSize="@dimen/bmi_textsize_info_result"
            android:layout_alignParentStart="true" android:layout_marginStart="0dp"
            android:padding="@dimen/bmi_padding_info_topbar" android:textColor="@color/bmi_color_info_bmivalue"/>
    <ImageView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/bmi_info_image"
            android:layout_toEndOf="@id/bmi_info_number"
            android:layout_alignBottom="@+id/bmi_info_number" android:layout_alignTop="@+id/bmi_info_number"
            android:padding="@dimen/bmi_padding_info_topbar"
            android:textSize="@dimen/bmi_textsize_info_classification" app:srcCompat="@drawable/bmi_kitten"
            android:adjustViewBounds="false" android:layout_alignParentEnd="true" android:layout_marginEnd="0dp"
            android:scaleType="fitEnd"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/bmi_info_longtext" android:layout_marginTop="@dimen/bmi_margin_info_text_top"
            android:layout_below="@+id/bmi_info_number" android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/bmi_margin_info_longtext" android:layout_alignParentEnd="true" android:layout_marginEnd="@dimen/bmi_margin_info_longtext"/>
</RelativeLayout>