<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="@dimen/bmi_history_size" android:layout_margin="@dimen/bmi_history_margin">

    <TextView
            android:text="@string/bmi_empty_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bmi_history_value" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textSize="@dimen/bmi_textsize_history_result"/>
    <TextView
            android:text="@string/bmi_history_mass_and_height_metric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bmi_history_mass_and_height"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/bmi_history_date_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bmi_history_date"
            app:layout_constraintTop_toBottomOf="@+id/bmi_history_mass_and_height"
            app:layout_constraintEnd_toEndOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>