<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bmi_history_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".HistoryActivity"/>
