package pl.krzysztofwojciechowski.bmi


import android.view.View
import android.view.ViewGroup
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.filters.LargeTest
import androidx.test.rule.ActivityTestRule
import androidx.test.runner.AndroidJUnit4
import org.hamcrest.Description
import org.hamcrest.Matcher
import org.hamcrest.Matchers.allOf
import org.hamcrest.TypeSafeMatcher
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@LargeTest
@RunWith(AndroidJUnit4::class)
class UnitChangeTest {

    @Rule
    @JvmField
    var mActivityTestRule = ActivityTestRule(MainActivity::class.java)

    @Test
    fun unitChangeTest() {
        val editMass = onView(withId(R.id.bmi_main_edit_mass))
        editMass.perform(scrollTo(), replaceText("65"), closeSoftKeyboard())

        val editHeight = onView(withId(R.id.bmi_main_edit_height))
        editHeight.perform(scrollTo(), replaceText("170"))
        editHeight.perform(pressImeActionButton())

        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        Thread.sleep(300)

        val overflowMenuButton = onView(
            allOf(
                withContentDescription("More options"),
                childAtPosition(
                    childAtPosition(
                        withId(R.id.action_bar),
                        1
                    ),
                    0
                ),
                isDisplayed()
            )
        )
        overflowMenuButton.perform(click())

        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        Thread.sleep(250)

        val changeUnits = onView(
            allOf(
                withId(R.id.title), withText("Change units"),
                childAtPosition(
                    childAtPosition(
                        withId(R.id.content),
                        0
                    ),
                    0
                ),
                isDisplayed()
            )
        )
        changeUnits.perform(click())

        val labelMass = onView(withId(R.id.bmi_main_label_mass))
        labelMass.check(matches(withText("Mass [lb]")))

        val labelHeight = onView(withId(R.id.bmi_main_label_height))
        labelHeight.check(matches(withText("Height [in]")))

        val labelValue = onView(withId(R.id.bmi_main_label_value))
        labelValue.check(matches(withText("0.00")))

        val labelClassification = onView(withId(R.id.bmi_main_label_classification))
        labelClassification.check(matches(withText("Unknown")))
    }

    private fun childAtPosition(
        parentMatcher: Matcher<View>, position: Int
    ): Matcher<View> {

        return object : TypeSafeMatcher<View>() {
            override fun describeTo(description: Description) {
                description.appendText("Child at position $position in parent ")
                parentMatcher.describeTo(description)
            }

            public override fun matchesSafely(view: View): Boolean {
                val parent = view.parent
                return parent is ViewGroup && parentMatcher.matches(parent)
                        && view == parent.getChildAt(position)
            }
        }
    }
}
